Fixed social media button underlining.

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "react-addons-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.13",
-    "reactstrap": "^4.8.0"
+    "reactstrap": "^4.8.0",
+    "source-map-explorer": "^1.5.0"
   },
   "scripts": {
+    "analyze": "source-map-explorer build/static/js/main.*",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
